crates/duckpond/tests/snapshots/parse_spec__err_unexpected_scenario_content.snap
---
source: crates/duckpond/tests/parse_spec.rs
expression: errors
---
[
    UnexpectedScenarioContent {
        span: 96..152,
    },
]
