crates/duckpond/tests/snapshots/parse_spec__err_unresolved_test_marker.snap
---
source: crates/duckpond/tests/parse_spec.rs
expression: errors
---
[
    UnresolvedTestMarker {
        name: "Valid credentials",
        span: 111..143,
    },
]
