crates/duckpond/tests/snapshots/parse_spec__inheritance.snap
---
source: crates/duckpond/tests/parse_spec.rs
expression: spec
---
SPEC: Email-password authentication
  SUMMARY: Users authenticate by submitting their email and password.
  REQUIREMENT: Email-password login
    The system SHALL allow a registered user to authenticate using their
      email address and password.
    MARKS: test: code
    SCENARIO: Valid credentials
      GIVENS:
        a user with a registered email and correct password
      WHENS:
        the user submits the login form
      THENS:
        the system issues a session token
        the user is redirected to their home page
    SCENARIO: Invalid password
      GIVENS:
        a user with a registered email
      WHENS:
        the user submits an incorrect password
      THENS:
        the system rejects the login
        displays a generic "invalid credentials" error
        does not reveal whether the email is registered
    SCENARIO: Visual correctness of login button
      GIVENS:
        the user is on the login page
      WHENS:
        the page finishes loading
      THENS:
        the sign-in button is visible and correctly styled
      MARKS: manual: visual check during release review
